--- a/views/partials/about.ejs
+++ b/views/partials/about.ejs
@@ -1,6 +1,6 @@
 <!-- <img id="profile-pic" src="./images/caleb-pic.jpg"> -->
 <div id="name-tag-wrapper">
-  <!-- <h1 id="name-tag">Caleb Hering</h1> -->
+  <h1 id="name-tag">About Me</h1>
 </div>
 <p id="about-me-text">Hi, I'm Caleb Hering, sometimes also known as <span style="color: white;">'c-hering'</span> or <span style="color: white;">'Toastyyyyy'</span>.
   I'm a 15yr old developer from Bethesda, Maryland and a sophomore at Walt Whitman Highschool. In the future I hope to study and pursue
