--- a/views/template.ejs
+++ b/views/template.ejs
@@ -4,8 +4,9 @@
       <% include partials/header.ejs %>
       <% include partials/scripts.ejs %>
       <% include partials/background.ejs %>
-      <div>
       <%- include(page) %>
+      <div id="main-wrapper">
+
       <%- include partials/about %>
       <%- include partials/projects %>
     </div>
