changed styling to fit scroll

--- a/views/partials/projects.ejs
+++ b/views/partials/projects.ejs
@@ -1,6 +1,7 @@
   <div class="project-content-wrapper">
     <ul class="image-slider-ul">
       <div id="test">
+        <h1 id="projects-title">Projects</h1>
       <!-- <% for(var i=0; i < projects.length; i++){ %> -->
           <li class="image-slider-li">
               <a href=<%- projects[i].link %> target="_blank">
