--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,5 +1,5 @@
 
-/*
+/*general
 _____                           _
 |  __ \                         | |
 | |  \/ ___ _ __   ___ _ __ __ _| |
@@ -11,7 +11,7 @@ _____                           _
  #main-wrapper{
    position: absolute;
    width: 1000px;
-   height: 2000px;
+   height: 1300px;
    background: #3B3C3D;
    border-radius: 5px;
    display: block;
@@ -44,7 +44,7 @@ _____                           _
   display: block;
   background-size: cover;
 }
-/*
+/*animations
   ___   _   _ ________  ___  ___ _____ _____ _____ _   _  _____
  / _ \ | \ | |_   _|  \/  | / _ \_   _|_   _|  _  | \ | |/  ___|
 / /_\ \|  \| | | | | .  . |/ /_\ \| |   | | | | | |  \| |\ `--.
@@ -83,7 +83,7 @@ _____                           _
     width: auto;
   }
 }
-/*
+/*menubar
 ___  ___ _____ _   _ _   _       ______  ___  ______
 |  \/  ||  ___| \ | | | | |      | ___ \/ _ \ | ___ \
 | .  . || |__ |  \| | | | |______| |_/ / /_\ \| |_/ /
@@ -165,7 +165,7 @@ ___  ___ _____ _   _ _   _       ______  ___  ______
   float: left;
   /*background-color: rgb(251, 255, 45);*/
 }
-/*
+/*home
  _   _
 | | | |
 | |_| | ___  _ __ ___   ___
@@ -196,7 +196,7 @@ ___  ___ _____ _   _ _   _       ______  ___  ______
   width: 250px;
   border-radius: 125px;
 }
-/*
+/*projects
 ____________ _____   ___ _____ _____ _____ _____
 | ___ \ ___ \  _  | |_  |  ___/  __ \_   _/  ___|
 | |_/ / |_/ / | | |   | | |__ | /  \/ | | \ `--.
@@ -209,10 +209,16 @@ ____________ _____   ___ _____ _____ _____ _____
   text-align: center;
   width: 100%;
 }
+#projects-title{
+  font-size: 50px;
+}
 #test{
-  height: 600px;
+  height: 500px;
   width: auto;
-  overflow: hidden;
+  overflow-y: scroll;
+  overflow-x: hidden;
+  padding-right: 17px;
+  border-bottom: 3px grey solid;
 }
 .image-slider-ul{
   position: relative;
@@ -230,7 +236,7 @@ ____________ _____   ___ _____ _____ _____ _____
   border-top: 4px solid #4cd4b0;
 }
 
-/*
+/*about
   ___  ______  _____ _   _ _____
  / _ \ | ___ \|  _  | | | |_   _|
 / /_\ \| |_/ /| | | | | | | | |
@@ -277,7 +283,7 @@ ____________ _____   ___ _____ _____ _____ _____
   margin-right: 10%;
   margin-bottom: 20%;
 }
-/*
+/*contact
  _____ _____ _   _ _____ ___  _____ _____
 /  __ \  _  | \ | |_   _/ _ \/  __ \_   _|
 | /  \/ | | |  \| | | |/ /_\ \ /  \/ | |
@@ -340,7 +346,7 @@ ____________ _____   ___ _____ _____ _____ _____
   color: #BF4A67;
   box-shadow: 0 3px #c9c9c9;
 }
-/*
+/*footer
 ______          _
 |  ___|        | |
 | |_ ___   ___ | |_ ___ _ __
